// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`English render 1`] = `
<div>
  <div
    class="_linkOuterWrapper_6c6071 "
  >
    <a
      data-testid="v2/en/test_atlas"
      href="/v2/en/test_atlas"
    >
      <div
        class="_linkInnerWrapper_6c6071"
      >
        <div
          class="_linkImageWrapper_6c6071"
        >
          <img
            alt="atlas photo"
            data-nimg="1"
            decoding="async"
            height="407"
            loading="lazy"
            src="https://picsum.photos/id/237/100/100.jpg?w=1920&q=75"
            srcset="https://picsum.photos/id/237/100/100.jpg?w=640&q=75 1x, https://picsum.photos/id/237/100/100.jpg?w=1920&q=75 2x"
            style="color: transparent; max-width: 100%; height: auto; object-fit: cover;"
            width="610"
          />
        </div>
        <div
          class="_linkText_6c6071"
        >
          <div
            class="_linkDateContainer_6c6071 "
          >
            <div
              class="_outerCircle_6c6071"
            >
              <div
                class="_innerDot_6c6071"
              />
            </div>
            Published 
            <strong
              class="_date_6c6071"
            >
              October 13 2014
            </strong>
          </div>
          <div
            class="_linkTitle_6c6071"
          >
            Testatlas 2
          </div>
          <div
            class="_linkIngress_6c6071"
          >
            <p>
              Lorem lipsum dolor 2
            </p>
          </div>
        </div>
      </div>
    </a>
  </div>
</div>
`;

exports[`Norsk render 1`] = `
<div>
  <div
    class="_linkOuterWrapper_6c6071 "
  >
    <a
      data-testid="v2/test_atlas"
      href="/v2/test_atlas"
    >
      <div
        class="_linkInnerWrapper_6c6071"
      >
        <div
          class="_linkImageWrapper_6c6071"
        >
          <img
            alt="atlas photo"
            data-nimg="1"
            decoding="async"
            height="407"
            loading="lazy"
            src="https://picsum.photos/id/237/100/100.jpg?w=1920&q=75"
            srcset="https://picsum.photos/id/237/100/100.jpg?w=640&q=75 1x, https://picsum.photos/id/237/100/100.jpg?w=1920&q=75 2x"
            style="color: transparent; max-width: 100%; height: auto; object-fit: cover;"
            width="610"
          />
        </div>
        <div
          class="_linkText_6c6071"
        >
          <div
            class="_linkDateContainer_6c6071 "
          >
            <div
              class="_outerCircle_6c6071"
            >
              <div
                class="_innerDot_6c6071"
              />
            </div>
            Publisert:
            <strong
              class="_date_6c6071"
            >
              13.10.2014
            </strong>
          </div>
          <div
            class="_linkTitle_6c6071"
          >
            Testatlas 1
          </div>
          <div
            class="_linkIngress_6c6071"
          >
            <p>
              Lorem lipsum dolor 1
            </p>
          </div>
        </div>
      </div>
    </a>
  </div>
</div>
`;

exports[`Wide is true 1`] = `
<div>
  <div
    class="_linkOuterWrapper_6c6071 _wide_6c6071"
  >
    <a
      data-testid=""
      href="/"
    >
      <div
        class="_linkInnerWrapper_6c6071"
      >
        <div
          class="_linkImageWrapper_6c6071"
        >
          <img
            alt="atlas photo"
            data-nimg="1"
            decoding="async"
            height="407"
            loading="lazy"
            src="https://picsum.photos/id/237/100/100.jpg?w=1920&q=75"
            srcset="https://picsum.photos/id/237/100/100.jpg?w=640&q=75 1x, https://picsum.photos/id/237/100/100.jpg?w=1920&q=75 2x"
            style="color: transparent; max-width: 100%; height: auto; object-fit: cover;"
            width="610"
          />
        </div>
        <div
          class="_linkText_6c6071"
        >
          <div
            class="_linkDateContainer_6c6071 "
          >
            <div
              class="_outerCircle_6c6071"
            >
              <div
                class="_innerDot_6c6071"
              />
            </div>
            Publisert:
            <strong
              class="_date_6c6071"
            >
              13.10.2014
            </strong>
          </div>
          <div
            class="_linkTitle_6c6071"
          />
          <div
            class="_linkIngress_6c6071"
          >
            <p />
          </div>
        </div>
      </div>
    </a>
  </div>
</div>
`;

exports[`newlyUpdated is true 1`] = `
<div>
  <div
    class="_linkOuterWrapper_6c6071 "
  >
    <a
      data-testid=""
      href="/"
    >
      <div
        class="_linkInnerWrapper_6c6071"
      >
        <div
          class="_linkImageWrapper_6c6071"
        >
          <img
            alt="atlas photo"
            data-nimg="1"
            decoding="async"
            height="407"
            loading="lazy"
            src="https://picsum.photos/id/237/100/100.jpg?w=1920&q=75"
            srcset="https://picsum.photos/id/237/100/100.jpg?w=640&q=75 1x, https://picsum.photos/id/237/100/100.jpg?w=1920&q=75 2x"
            style="color: transparent; max-width: 100%; height: auto; object-fit: cover;"
            width="610"
          />
        </div>
        <div
          class="_linkText_6c6071"
        >
          <div
            class="_linkDateContainer_6c6071 _newlyUpdated_6c6071"
          >
            <div
              class="_outerCircle_6c6071"
            >
              <div
                class="_innerDot_6c6071"
              />
            </div>
            Publisert:
            <strong
              class="_date_6c6071"
            >
              13.10.2014
            </strong>
          </div>
          <div
            class="_linkTitle_6c6071"
          />
          <div
            class="_linkIngress_6c6071"
          >
            <p />
          </div>
        </div>
      </div>
    </a>
  </div>
</div>
`;
